# euchre

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
docs/: spec.md
euchre/: README.md  __main__.py  app.py  bots.py  card.py  cards.py  constants.py  core.py  dealer.py  dealers.py  inputs.py  interface.py  main.py  player.py  players.py  scores.py  team.py  teams.py  titles.py  trump.py  trumps.py
euchre/docs/: constants.py
euchre/gui/: interface.py
euchre/interface/: interface.py
euchre/src/: app.py  bidding.py  bots.py  cards.py  constants.py  dealers.py  game.py  inputs.py  interface.py  players.py  playing.py  scores.py  teams.py  titles.py  trumps.py
euchre/src/cmd/: bots.py  cards.py  dealers.py  players.py  scores.py  teams.py  titles.py  trumps.py
euchre/src/gui/: app.py  bots.py  cards.py  dealers.py  inputs.py  interface.py  players.py  scores.py  teams.py  titles.py  trumps.py
src/euchre/: __main__.py
src/euchre/controller/: game_controller.py
src/euchre/model/: bidding.py  bots.py  cards.py  dealers.py  game.py  inputs.py  players.py  playing.py  scores.py  teams.py  titles.py
src/euchre/view/: interface.py
tests/: test_cardComparisons.py  test_cardMethods.py  test_cardSorting.py  test_playerGameLoopMechanics.py  test_playerMethods.py  test_scoreHighestRanking.py  test_scores.py
