[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "euchre"
version = "0.0.3"
authors = [
  { name="Austin Cronin", email="austin.cronin3d@gmail.com" },
]
description = "A package to play the game of Euchre."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tincro/euchre"
Issues = "https://github.com/tincro/euchre/issues"